--- a/proposal_latex/proposal.tex
+++ b/proposal_latex/proposal.tex
@@ -78,7 +78,7 @@ In collaboration with the Quantum Research Group at the University of KwaZulu-Na
 
 \vspace{10.0cm}
 \begin{abstract}
-\noindent Quantum machine learning, the intersection of quantum computation and classical machine learning, bears the potential to provide more efficient ways to deal with big data through the use of quantum superpositions, entanglement and the resulting quantum parallelism. The proposed research will attempt to implement and simulate two quantum machine learning routines and use them to solve small machine learning problems. That will establish one of the earliest proof-of-concept studies in the field and demonstrate that quantum machine learning is already implementable with small number of qubits. This is vital to show that an extrapolation to larger quantum computing devices will indeed lead to vast speed-ups of current machine learning algorithms.
+\noindent Quantum machine learning, the intersection of quantum computation and classical machine learning, bears the potential to provide more efficient ways to deal with big data through the use of quantum superpositions, entanglement and the resulting quantum parallelism. The proposed research will attempt to implement and simulate two quantum machine learning routines and use them to solve small machine learning problems. That will establish one of the earliest proof-of-concept studies in the field and demonstrate that quantum machine learning is already implementable on small-scale quantum computers. This is vital to show that an extrapolation to larger quantum computing devices will indeed lead to vast speed-ups of current machine learning algorithms.
 
 %bears the potential to resolve the problems in classical machine learning such as the growing computational complexity
 
@@ -103,7 +103,7 @@ A promising solution is the use of quantum computation which has been researched
 \label{equ: simplequbit}
 \ket{q} = \alpha \ket{0} + \beta \ket{1}
 \end{equation}
-where $\alpha$ and $\beta$ are complex coefficients and are often referred to as amplitudes. When measuring qubit $\ket{q}$ it will take the value \0 with a probability of ${|\alpha|}^{2}$ and \1 with a probability of ${|\beta|}^{2}$. Since the total probability has to be 1, the normalization condition ${|\alpha|}^{2} + {|\beta|}^{2} =  1$ must be satisfied at all times.
+where $\alpha$ and $\beta$ are complex numbers and often referred to as amplitudes. When measuring qubit $\ket{q}$ it will take the value \0 with a probability of ${|\alpha|}^{2}$ and \1 with a probability of ${|\beta|}^{2}$. Since the total probability has to sum to unity, the normalization condition ${|\alpha|}^{2} + {|\beta|}^{2} =  1$ must be satisfied at all times.
 
 This peculiar property gives rise to so-called quantum parallelism, which enables the execution of certain operations on many quantum states at the same time. Despite this advantage, the difficulty in quantum computation lies in the retrieval of the computed solution since a measurement of a qubit collapses it into a single classical bit and thereby destroys information about its previous superposition. Several quantum algorithms have been proposed that provide exponential speed-ups when compared to their classical counterparts with Shor's prime factorization algorithm being the most famous \citep{shor1994}.
 %As another example, Grover's quantum database search algorithm enables finding a single element in a list of $N$ elements within roughly $\sqrt{N}$ quantum mechanical steps instead of $N$ classical steps \citep{grover}.
@@ -146,7 +146,7 @@ Classical ML is a very practical topic since it can be directly tested, verified
 Until now there have been only few experimental verifications of QML algorithms that establish proof-of-concept. \cite{Li2015} successfully distinguished a handwritten six from a nine using a quantum support vector machine on a four-qubit nuclear magnetic resonance test bench. In addition, \cite{Cai2015} were first to experimentally demonstrate quantum machine learning on a photonic QC and showed that the distance between two vectors and their inner product can indeed be computed quantum mechanically. Lastly, \cite{Riste2015} solved a learning parity problem with five superconducting qubits and found that a quantum advantage can already be observed in non error-corrected systems.
 
 %Consequently,
-Considering the gap between the number of proposed QML algorithms and the few experimental realisations, it remains important to find QML problems which can already be implemented on low-qubit devices. Hence, the purpose of this study is to provide proof-of-concept implementation of selected QML algorithms on small datasets. This is an important step in the attempt to shift QML from a purely theoretical research area to a more applied field such as classical ML. 
+Considering the gap between the number of proposed QML algorithms and the few experimental realisations, it remains important to find QML problems which can already be implemented on small-scale QCs. Hence, the purpose of this study is to provide proof-of-concept implementation of selected QML algorithms on small datasets. This is an important step in the attempt to shift QML from a purely theoretical research area to a more applied field such as classical ML. 
 %Furthermore, this can also lead to verification or falsification of the claims and assumptions made in the theoretical field of QML. 
 
 %Does this belong here?
@@ -232,7 +232,7 @@ Secondly, earlier this year IBM has enabled public access to their experimental 
 Both algorithms assume that the classical data is readily available in the form of quantum states. Since it is a non-trivial and still researched topic, the first challenge will be translating the classical data into such states. The quantum version of the distance weighted kNN requires a binary data string of length $n$ (e.g. 0110) to be encoded one to one into $n$ qubits (e.g. $\ket{0110}$). This will be referred to as \textit{qubit encoding} and implemented using the algorithm outlined in \cite{ventura1999initializing}.
 %The algorithm used for qubit encoding in this research is described in \cite{ventura1999initializing}.
 %A possible algorithm for this type of data encoding was proposed by \cite{ventura1999initializing}.
-The quantum linear regression algorithm is based on so called \textit{amplitude encoding}, where the classical data is written into the amplitudes ($\alpha$ and $\beta$ in Equ.~\ref{equ: simplequbit}) of quantum states which is considerably more difficult to achieve than qubit encoding. It is still a very active field of research and so far it can only be done with relatively uniform data sets. For this purpose, the algorithm proposed in \cite{grover2002creating} will be used and special attention will be paid to choosing a suitable dataset.
+The quantum linear regression algorithm is based on so called \textit{amplitude encoding}, where the classical data is written into the amplitudes ($\alpha$ and $\beta$ in Equ.~\ref{equ: simplequbit}) of quantum states, which is considerably more difficult to achieve than qubit encoding. It is still a very active field of research and so far it can only be done with relatively uniform data sets. For this purpose, the algorithm proposed in \cite{grover2002creating} will be used and special attention will be paid to choosing a suitable dataset.
 
 \begin{figure}[!ht]
       \centering
@@ -246,7 +246,7 @@ The quantum linear regression algorithm is based on so called \textit{amplitude 
 Next, two separate quantum circuits consisting of quantum logic gates will be designed that accurately represent the two QML algorithms as outlined in the paper of \cite{Schuld2014, Schuld2016}. Each quantum circuit consist of single- and multi-qubit gates of which a simple example is shown in Fig.~\ref{fig:qcircuit}. Each of those circuits is then combined with its respective quantum data encoding circuit.
 
 Lastly, the computed solution needs to be retrieved by measuring specific qubits. By repeating the execution of the algorithms, a probability distribution of the qubit measurements is obtained that represents the solution to the given problem.
-
+\newpage
 To summarize, the steps needed for the successful implementation of a QML algorithm are given below.
 
 \begin{enumerate}
