--- a/Latex/QIPCCtalk_latex/demo.tex
+++ b/Latex/QIPCCtalk_latex/demo.tex
@@ -26,7 +26,7 @@
 0.02823, 3622, 0.08416, 3478, 0.02086, 2997
 0.01008, 17838, 0.005179, 17566, 0.01494, 14721
 0.00165, 89130,0.0015799, 88216, 0.003327, 74009
-%0.00156, 444646, 0.0015601, 439060, 0.001578, 370813
+0.00156, 444646, 0.0015601, 439060, 0.001578, 370813
 %previous 3rd row: 0.04951, 728, 0.224107, 642, 0.020864, 601
 
 \end{filecontents}
@@ -148,7 +148,7 @@ Machine learning can be subdivided into three major fields.
 \setbeamertemplate{frame footer}{}
 \begin{frame}[fragile]{Machine Learning}
    
-Machine learning can be subdivided into three major fields.$\mathcal{O}(input size)$
+Machine learning can be subdivided into three major fields.
 
 \metroset{block=fill}
 
@@ -179,30 +179,16 @@ Machine learning can be subdivided into three major fields.$\mathcal{O}(input si
 \setbeamertemplate{frame footer}{References go here}
 \begin{frame}[fragile]{Quantum Machine Learning}
 
-Some general info about QML. How can quantum computing aid classical machine learning?
-
-\end{frame}
-}
-
-{
-\setbeamertemplate{frame footer}{References go here}
-\begin{frame}[fragile]{Experimental realizations so far}
-
-
-Until now there have been only few experimental verifications of QML algorithms that establish proof-
-of-concept. Li, Liu, Xu, and Du (2015) successfully distinguished a handwritten six from a nine using a
-quantum support vector machine on a four-qubit nuclear magnetic resonance test bench. In addition, Cai
-et al. (2015) were first to experimentally demonstrate quantum machine learning on a photonic QC and
-showed that the distance between two vectors and their inner product can indeed be computed quantum
-mechanically. Lastly, Ristè et al. (2015) solved a learning parity problem with five superconducting qubits
-and found that a quantum advantage can already be observed in non error-corrected systems.
-
-
-%Explain the experimental results that have been shown so far. Outline problems with non-error corrected qubits, gate times and small qubit numbers.
-
-%> only proof-of-concept so far
-%little is known about full procedure from crude data to final classification
-
+\begin{itemize}
+\item ML involves manipulation of large vectors and matrices
+\item Quantum mechanics is about vectors $\in$ complex Hilbert spaces
+\item Quantum computers are performing linear operations on qubits
+\item Hence, we can manipulate large vectors in parallel on quantum computers
+\item So can we use QC to improve classical ML algorithms??
+\vspace{8mm}
+\item Classical ML is a very practical topic\\
+\item BUT, QML has been of almost entirely theoretical nature
+\end{itemize}
 \end{frame}
 }
 
@@ -212,18 +198,27 @@ blogger/2012/10/26/classification-of-hand-written-digits-3/. Copyright 2012 by B
 permission.}}
 \begin{frame}[fragile]{Classical k-nearest neighbour}
  
- \begin{minipage}[t]{.5\textwidth}
-      
-Some description goes here.
-\end{minipage}%%%%%
-\begin{minipage}[c]{.5\textwidth}
-%\centering
-       \includegraphics[width=\textwidth]{knn-concept.png}
-       \captionsetup{justification=raggedright, singlelinecheck=false}
-      \captionof{figure}{\footnotesize{Visualization of a kNN classifier\footnotemark[1]}}
 
+\centering{
+- kNN is a non-parametric classifier\\
+- $k$ is a positive integer, usually chosen small}
+
+\begin{minipage}[t]{.35\textwidth}
+Given training data set:\\
+${D}_{T}$ = ${v}_{0}, {v}_{1},..,{v}_{10}$ \\
+$v_{i} \in$ \{$A$, $B$\}
+
+\end{minipage}%%%
+\begin{minipage}[t]{.65\textwidth}
+Given a new vector $\tilde{x}$ (red star):\\
+- consider $k$ nearest neighbours\\
+- classify $\tilde{x}$, based on majority vote, as $A$ or $B$
 \end{minipage}
 
+\begin{figure}
+       \includegraphics[width=0.5\textwidth]{knn-concept.png}
+      \caption{\footnotesize{Visualization of a kNN classifier\footnotemark[1]}}
+\end{figure}
  
 \end{frame}
 }
@@ -321,18 +316,33 @@ where
 \begin{equation}
 \frac{1}{2\sqrt{M}}\sum_{m=1}^{M} (\ket{0}[\ket{\Psi_{\tilde{x}}}+\ket{\Psi_{x^{m}}}]+\ket{1}[\ket{\Psi_{\tilde{x}}}-\ket{\Psi_{x^{m}}}])\ket{y^{m}}\ket{m}
 \end{equation}
+\end{frame}
+}
+
+{
+\setbeamertemplate{frame footer}{\vspace{-2mm}\tiny{Maria Schuld (2016), unpublished}}
+\begin{frame}{The algorithm}
+
 After successful conditional measurement, the state is proportional to
 \begin{equation}
 \frac{1}{2\sqrt{M}}\sum_{m=1}^{M} \sum_{i=1}^{N} (\tilde{x}_i+x_i^m)\ket{0}\ket{i}\ket{y^{m}}\ket{m}
 \end{equation}
-	
+
+\begin{equation}
+p(\ket{y^m} = \ket{0})= \sum_{m \mid y^m=0} 1 - \frac{1}{4} \mid \tilde{x} - x^m \mid ^2
+\end{equation}
 	\metroset{block=fill}
-	\begin{alertblock}{Algorithmic complexity}
+	\begin{alertblock}{Overall algorithmic complexity}
 	\centering
 	$\mathcal{O}(\frac{1}{p_{acc}})$ where $p_{acc}$ is the probability of measuring ancilla in the $\ket{0}$ state
 	\end{alertblock}
 \end{frame}
 }
+
+
+
+
+
 
 {
 \setbeamertemplate{frame footer}{}
@@ -384,14 +394,24 @@ Flip the ancilla qubit in the first register
 \setbeamertemplate{frame footer}{}
 \begin{frame}{Implementation with IBM's quantum computer}
 
-\begin{minipage}[c]{.4\textwidth}
-Minipage 1
+\begin{figure}
+\includegraphics[height=0.5\textwidth]{IBMamplitudecomposer.png}
+       \caption{\footnotesize{IBM's quantum composer} }
+\end{figure}
+\vspace{-5mm}
+\begin{minipage}[t]{.5\textwidth}
+\begin{itemize}
+\item Accessible to the public
+\item Allows for ideal + real simulations
+\end{itemize}
 \end{minipage}%%%%
-\begin{minipage}[c][][b]{.6\textwidth}
-Minipage 2
+\begin{minipage}[t]{.5\textwidth}
+\begin{itemize}
+\item 5 superconducting qubits
+\item 40 gates (39 gates + 1 measurement)
+
+\end{itemize}
 \end{minipage}
-
-
 \end{frame}
 }
 
@@ -427,7 +447,7 @@ e^{i(\alpha+\frac{\beta}{2}-\frac{\delta}{2})}\sin{\frac{\gamma}{2}} & e^{i(\alp
 %calculating a root of a function f(x) with n-digit precision, provided that a good initial approximation is known, is O((\log n) F(n)) where F(n) is the cost of calculating f(x)/f'(x)\, with n-digit precision.
 
 	\metroset{block=fill}
-	\begin{alertblock}{Algorithmic complexity}
+	\begin{alertblock}{Overall algorithmic complexity}
 	$\mathcal{O}(\frac{1}{p_{acc}})+\mathcal{O}(k)$ where $k$ is number of root finding iterations\textsuperscript{2}
 	\end{alertblock}
 \end{frame}
@@ -450,7 +470,7 @@ Using a root finding algorithm for non-linear equations we find:
 \end{equation}
 Then,
 \begin{align}
-A \quad= \quad R_z(\beta)R_y(\frac{\gamma}{2})\quad =& \quad R_z(2\pi) \quad = \quad \textcolor{green}{XZXZ} \\
+A \quad= \quad R_z(\beta)R_y(\frac{\gamma}{2})\quad =& \quad R_z(2\pi) \quad = \quad \textcolor{green}{\mathds{1}} \\
 B\quad =\quad R_y(-\frac{\gamma}{2})R_z(-\frac{\delta+\beta}{2})\quad =& \quad R_z(-\frac{23}{16}\pi) \quad= \quad \textcolor{red}{???}  \\
 C \quad=\quad R_z(\frac{\delta-\beta}{2})\quad =& \quad R_z(-\frac{9}{16}\pi) \quad= \quad \textcolor{red}{???} \\
 \begin{pmatrix} 1&0\cr0&e^{i\alpha} \end{pmatrix}\quad=& \quad \begin{pmatrix} 1&0\cr0&e^{i\pi} \end{pmatrix}\quad= \quad \textcolor{green}{Z}
@@ -463,27 +483,31 @@ C \quad=\quad R_z(\frac{\delta-\beta}{2})\quad =& \quad R_z(-\frac{9}{16}\pi) \q
 \setbeamertemplate{frame footer}{\tiny{\textsuperscript{1}Dawson, C. M., \& Nielsen, M. A. (2005). The Solovay-Kitaev algorithm. arXiv preprint quant-ph/0505030.}}
 \begin{frame}{The Solovay-Kitaev theorem}
 
+\begin{align}
+B\quad =&\quad R_z(-\frac{23}{16}\pi) \quad= \quad \textcolor{red}{???}  \\
+C \quad=&\quad R_z(-\frac{9}{16}\pi) \quad= \quad \textcolor{red}{???}
+\end{align}
+
 The Solovay-Kitaev theorem guarantees that given a set of single-qubit quantum gates which generates a dense subset of $SU(2)$, then that set is guaranteed to fill $SU(2)$ quickly.\textsuperscript{1}
  
 $\rightarrow$ \textcolor{green}{\textbf{Hence, given any universal gate set it is possible to obtain good approximations to any desired gate.}}
 
 $\rightarrow$ \textcolor{red}{\textbf{But needs to be computed classically!}}
-\vspace{16mm}
-\metroset{block=fill}
-	\begin{alertblock}{Algorithmic complexity}
-	$\mathcal{O}(\frac{1}{p_{acc}})+\mathcal{O}(k)+\mathcal{O}(m*log^{2.71}(\frac{m}{\epsilon}))$ for $\epsilon$-approximations of $m$ gates\textsuperscript{1}
-	\end{alertblock}
+
 \end{frame}
 }
 
 {
-\setbeamertemplate{frame footer}{}
+\setbeamertemplate{frame footer}{\tiny{\textsuperscript{1}Booth Jr, J. (2012). Quantum compiler optimizations. arXiv preprint arXiv:1206.3348.}}
 \begin{frame}{The Solovay-Kitaev algorithm}
 
-What is fowler distance?
+Fowler distance\textsuperscript{1}:
+\begin{equation}
+dist(U,U_{approx}) = \sqrt{\frac{2-\mid tr(U\cdot U_{approx}^\dagger)\mid}{2}}
+\end{equation}
 
 \begin{figure}
-    \begin{tikzpicture}
+    \begin{tikzpicture}[scale=0.8]
 \begin{axis}[xlabel={Gate count},ylabel={Fowler distance [$d(U,U_{approx})$]}]
 
 % Graph column 2 versus column 0
@@ -505,32 +529,55 @@ What is fowler distance?
 \setbeamertemplate{frame footer}{}
 \begin{frame}{The Solovay-Kitaev algorithm}
 
-%SK needs to be implemented for each gate that is not element of the universal gate set:
-%\begin{align}
-%R_z(-\frac{23}{16}\pi) \quad \rightarrow& \quad  %\\
-%R_z(-\frac{9}{16}\pi) \quad \rightarrow& \quad 121 gates \quad (d(U,U_{approx}) = 0.04389)
-%\end{align}
-
 IBM's quantum computer needs \textbf{130ns for single-qubit gates} and \textbf{500ns for CNOT gates.}
 
-Qubit decoherence times:
+IBM qubit decoherence times:
 
-\SI{49.5}{\micro\second} $\leq T1 \leq$ \SI{85.3}{\micro\second}\\
-\SI{56.0}{\micro\second} $\leq T2 \leq$ \SI{139.7}{\micro\second}
+\SI{49.5}{\micro\second} $\leq T_1 \leq$ \SI{85.3}{\micro\second} "amplitude damping"\\
+\SI{56.0}{\micro\second} $\leq T_2 \leq$ \SI{139.7}{\micro\second} "phase damping"
 \vspace{6mm}
+
+
 \begin{table}
-    \begin{tabular}{c| c |c |c}
+    \begin{tabular}{c| c |c |c }
       \toprule
       Approx. Gate & Distance & Gate count & Execution time\\
       \midrule
-      $R_z(-\frac{9}{16}\pi)$ & 0.04389 & 121 & \textcolor{green}{\SI{15.7}{\micro\second}}\\
-       & 0.02823 & 3,622 & \textcolor{red}{\SI{470.9}{\micro\second}}\\
-       & 0.004698 & 20,496 & \textcolor{red}{\SI{2664.5}{\micro\second}}\\
-       %& 14,160,467 & 20,116,842 & 20,116,842\\
+      $R_z(-\frac{23}{16}\pi)$ & 0.15165 & 25 & \textcolor{green}{$\sim$\SI{3}{\micro\second}}\\
+       & 0.10722 & 109 & \textcolor{green}{$\sim$\SI{14}{\micro\second}}\\
+       & 0.02086 & 2997 & \textcolor{red}{$\sim$\SI{390}{\micro\second}}\\
+       & 0.01494 & 14721 & \textcolor{red}{$\sim$\SI{1914}{\micro\second}}\\
+       & 0.003327 & 74009 & \textcolor{red}{$\sim$\SI{9621}{\micro\second}}\\
+       & 0.001578 & 370813 & \textcolor{red}{$\sim$\SI{48206}{\micro\second}}\\
       \bottomrule
     \end{tabular}
     \caption{SK algorithm results}
   \end{table}
+ 
+
+\end{frame}
+}
+
+{
+\setbeamertemplate{frame footer}{\tiny{\textsuperscript{1}Dawson, C. M., \& Nielsen, M. A. (2005). The Solovay-Kitaev algorithm. arXiv preprint quant-ph/0505030.}}
+\begin{frame}{Adding complexities}
+
+Executing the SK algorithm adds to our overall algorithmic complexity:
+
+\metroset{block=fill}
+	\begin{alertblock}{Overall algorithmic complexity}
+	$\mathcal{O}(\frac{1}{p_{acc}})+\mathcal{O}(k)+\mathcal{O}(m*log^{2.71}(\frac{m}{\epsilon}))$ for $\epsilon$-approximations of $m$ gates\textsuperscript{1}
+	\end{alertblock}
+	
+Due to state preparation we went from
+\begin{equation}
+\mathcal{O}(\frac{1}{p_{acc}})
+\end{equation}
+suddenly to 
+\begin{equation}
+\mathcal{O}(m*log^{2.71}(\frac{m}{\epsilon}))
+\end{equation}
+where $m$ is the number of gates that need approximation to $\epsilon$-accuracy
 
 \end{frame}
 }
@@ -539,12 +586,94 @@ Qubit decoherence times:
 \setbeamertemplate{frame footer}{}
 \begin{frame}{Liqui$\ket{}$ simulations}
 	
-Show that the simple binary classification problem works in Liquid since we can directly implement the controlled $R_z$ rotations
+Currently impossible to implement the quantum algorithm on IBM's quantum computer!
+$\rightarrow$ can only simulate it with i.e. Liqui$\ket{}$
 
+In Liqui$\ket{}$ we can directly implement the controlled $R_y$ rotation!
+
+%Could you also show what happens if I use approximated gate sequences?	
 %Run the command mono Liquid.exe "__BinaryAmplitudeKNN(10000)" in a terminal
 
-Could you also show what happens if I use approximated gate sequences?
-	
+\end{frame}
+}
+
+\section{Conclusion}
+
+\begin{frame}{Summary}
+
+sefsefesfsefsef
+\end{frame}
+
+\begin{frame}{Taking it further}
+
+\begin{itemize}
+\item Complexity analysis of the qubit-based kNN algorithm
+\item Classification of gaussian probability distributions
+\item Implementing more general state preparation algorithms
+\end{itemize}
+\end{frame}
+
+\begin{frame}{References}
+  Some references to showcase [allowframebreaks] \cite{knuth92,ConcreteMath,Simpson,Er01,greenwade93}
+\end{frame}
+
+\begin{frame}[standout]
+  Questions?
+\end{frame}
+
+
+\appendix
+
+\begin{frame}[fragile]{Backup slide: Qubit decoherence times}
+
+
+\begin{block}{$T_1$: Longitudinal coherence time (amplitude damping)}
+
+- Prepare $\ket{0}$ state
+- Apply the X (NOT) gate s.t. qubit is in $\ket{1}$ state
+- Wait for time $t$
+- Measure the probability of being in $\ket{1}$ state
+
+More info here!
+\end{block}
+\vspace{5mm}
+\begin{block}{$T_2$: Transversal coherence time (phase damping)}
+
+- Prepare $\ket{0}$ state
+- Apply Hadamard $\rightarrow \quad \frac{\ket{0}+\ket{1}}{\sqrt{2}}$
+- Wait for time $t$
+- Apply Hadamard again
+- Measure the probability of being in $\ket{0}$ state
+
+After a long time, we expect this probability to go to 0.5 since it becomes more and more likely that something caused the qubit to move towards the $\ket{0}$ or $\ket{1}$.
+\end{block}
+
+\end{frame}
+
+{
+\setbeamertemplate{frame footer}{\tiny{\textsuperscript{1}Li, Z., Liu, X., Xu, N., \& Du, J. (2015). Experimental realization of a quantum support vector machine. Physical Review Letters, 114 (14), 1–5. doi: 10.1103/PhysRevLett.114.140504 \newline\textsuperscript{2}Cai, X. D., Wu, D., Su, Z. E., Chen, M. C., Wang, X. L., Li, L., . . . Pan, J. W. (2015). Entanglement-
+based machine learning on a quantum computer. Physical Review Letters, 114 (11), 1–5. doi:10.1103/PhysRevLett.114.110504 \newline\textsuperscript{3}Ristè, D., da Silva, M. P., Ryan, C. A., Cross, A. W., Smolin, J. A., Gambetta, J. M., . . . Johnson,
+B. R. (2015). Demonstration of quantum advantage in machine learning. arXiv:1512.06069 , 1–12.
+Retrieved from http://arxiv.org/abs/1512.06069 }}
+\begin{frame}[fragile]{Backup Slide II: Experimental realizations}
+
+
+Only few experimental verifications of QML algorithms:
+
+- Li, Liu, Xu, and Du (2015) successfully distinguished a handwritten six from a nine using a
+quantum support vector machine on a four-qubit nuclear magnetic resonance test bench\textsuperscript{1}
+
+- Cai et al. (2015) were first to experimentally demonstrate quantum machine learning on a photonic QC and showed that the distance between two vectors and their inner product can indeed be computed quantum
+mechanically\textsuperscript{2}
+
+- Ristè et al. (2015) solved a learning parity problem with five superconducting qubits and found that a quantum advantage can already be observed in non error-corrected systems\textsuperscript{3}
+
+
+%Explain the experimental results that have been shown so far. Outline problems with non-error corrected qubits, gate times and small qubit numbers.
+
+%> only proof-of-concept so far
+%little is known about full procedure from crude data to final classification
+
 \end{frame}
 }
 
@@ -601,29 +730,6 @@ to all qubits in the data register leads to a gaussian distribution over the "Ha
 \end{figure}
 \end{frame}
 }
-
-
-\section{Conclusion}
-
-\begin{frame}{Summary}
-
-sefsefesfsefsef
-\end{frame}
-
-\begin{frame}{References}
-  Some references to showcase [allowframebreaks] \cite{knuth92,ConcreteMath,Simpson,Er01,greenwade93}
-\end{frame}
-
-\begin{frame}[standout]
-  Questions?
-\end{frame}
-
-
-\appendix
-
-\begin{frame}[fragile]{Backup slide I}
-fefesfesfesfefesf
-\end{frame}
 
 \begin{frame}[allowframebreaks]{Backup slide II}
 
